Fixes Button onClick event handling to support TestBench.
Minor fixes to link-style Button base styles.

svn changeset:8570 branch:6.1

--- a/WebContent/VAADIN/themes/base/button/button.css
+++ b/WebContent/VAADIN/themes/base/button/button.css
@@ -105,12 +105,14 @@
 .v-ie6 .v-nativebutton {
 	width: 1px;
 }
-.v-ie6 .v-nativebutton,
-.v-ie7 .v-nativebutton,
-.v-ie8 .v-nativebutton {
+.v-ie .v-nativebutton {
 	overflow: visible;
 	padding-left: 1em;
 	padding-right: 1em;
+}
+
+.v-ie .v-nativebutton-link {
+	padding: 0;
 }
 
 /*
