Updated notification styles for Reindeer. Fixes #3186: Add a close icon for Notification.ERROR (Reindeer)
svn changeset:8591 branch:6.1

--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -3002,23 +3002,35 @@ td.v-datefield-calendarpanel-nextyear {
 	-moz-border-radius: 4px;
 	-webkit-border-radius: 4px;
 	font-size: 100%;
-	background: #babcbe;
+	background: #c8ccd0;
+	font-weight: bold;
+}
+.v-Notification p {
+	line-height: 1.3;
 }
 .v-Notification.warning {
-	background: #f4a100;
+	background: #fdf3b5;
+	color: #ca9a61;
+	border: 3px solid #fee3af;
 }
 .v-Notification.error {
-	background: #d82000;
+	background: #b40000 none no-repeat right top;
+	background-image: url(notification/img/error-close.png);
+	border: 3px solid #ca3030;
 }
 .v-Notification.tray {
 	margin: 0 5px 5px 0;
-	background: #16181a;
+	background: #3b3c3e;
+	border: 2px solid #585b5c;
+	padding: 0.8em 0.9em;
 }
 .v-Notification.tray h1 {
 	font-size: 14px;
+	line-height: 18px;
 }
 .v-Notification.tray p {
 	font-size: 12px;
+	font-weight: normal;
 }
 
 .v-panel-caption,
