Small optimization to Reindeer notification CSS.
svn changeset:8592 branch:6.1

--- a/WebContent/VAADIN/themes/reindeer/notification/notification.css
+++ b/WebContent/VAADIN/themes/reindeer/notification/notification.css
@@ -16,8 +16,7 @@
 	border: 3px solid #fee3af;
 }
 .v-Notification.error {
-	background: #b40000 none no-repeat right top;
-	background-image: url(img/error-close.png);
+	background: #b40000 url(img/error-close.png) no-repeat right top;
 	border: 3px solid #ca3030;
 }
 .v-Notification.tray {
