Additional fix for #3247: VPopupView contains hard coded text "Loading..." -CSS files, forgot to commit
svn changeset:8595 branch:6.1

--- a/WebContent/VAADIN/themes/base/popupview/popupview.css
+++ b/WebContent/VAADIN/themes/base/popupview/popupview.css
@@ -5,3 +5,8 @@
 .v-popupview-popup {
 	overflow: auto;
 }
+.v-popupview-loading {
+	width: 30px;
+	height: 30px;
+	background: transparent url(../common/img/ajax-loader-medium.gif) no-repeat 50%;
+}
