Fix for #3257 - Button in a table is too wide in IE7
svn changeset:8615 branch:6.1

--- a/WebContent/VAADIN/themes/base/button/button.css
+++ b/WebContent/VAADIN/themes/base/button/button.css
@@ -25,6 +25,10 @@
 	display: inline;
 }
 
+.v-ie7 .v-button {
+   display: inline;
+}
+
 .v-button-wrap,
 .v-button-caption {
 	vertical-align: middle;
