--- a/WebContent/VAADIN/themes/runo/styles.css
+++ b/WebContent/VAADIN/themes/runo/styles.css
@@ -59,6 +59,10 @@
 	display: inline;
 }
 
+.v-ie7 .v-button {
+   display: inline;
+}
+
 .v-button-wrap,
 .v-button-caption {
 	vertical-align: middle;
