better margin support (via server side api) for csslayout + some cleaning
svn changeset:8644 branch:6.1

--- a/WebContent/VAADIN/themes/base/styles.css
+++ b/WebContent/VAADIN/themes/base/styles.css
@@ -448,6 +448,23 @@ div.v-app-loading {
 	padding: 2px;
 }
 
+.v-csslayout {
+	overflow: hidden;
+}
+
+.v-csslayout-margin-top {
+	padding-top: 2em;	
+}
+.v-csslayout-margin-bottom {
+	padding-bottom: 2em;	
+}
+.v-csslayout-margin-left {
+	padding-left: 2em;	
+}
+.v-csslayout-margin-right {
+	padding-right: 2em;	
+}
+
 .v-customcomponent {
 	overflow: hidden;
 }
