--- a/WebContent/VAADIN/themes/sampler/layouts/cssexample.css
+++ b/WebContent/VAADIN/themes/sampler/layouts/cssexample.css
@@ -1,26 +1,30 @@
 .floatedpanel {
-	float:right;
+	float: right;
 }
 
 .footer {
 	width: 3in; 
 	padding: 3px;
-	margin-left:auto;
-	margin-right:auto;
-	clear:both; 
-	height:40px; 
-	background-color: grey; 
-	white-space:normal;
+	margin: 0 auto;
+	clear: both; 
+	height: 40px; 
+	background: #efefef; 
+	white-space: normal;
+	padding: 10px;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
 }
 
 .brick {
-	text-align:center;
+	font-size: 14px;
+	font-weight: bold;
 	width: 100px; 
 	height: 100px; 
 	margin: 10px;
-	padding:10px;
-	background-color:#1E2123; 
-	color:white;
-	float:left; 
-	border: 3px solid black;
+	padding: 10px;
+	background: #1E2123; 
+	color: #fff;
+	float: left;
+	-webkit-border-radius: 6px;
+	-moz-border-radius: 6px;
 } 
