Fixed button sizing calculation regression for Runo theme (moved box-sizing property from Reindeer to Base).
svn changeset:8663 branch:6.1

--- a/WebContent/VAADIN/themes/base/styles.css
+++ b/WebContent/VAADIN/themes/base/styles.css
@@ -53,6 +53,10 @@
 	-moz-user-select: none;
 	-ie-user-select: none;
 	user-select: none;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
 	}
 
 .v-ie6 .v-button {
