--- a/WebContent/VAADIN/themes/runo/styles.css
+++ b/WebContent/VAADIN/themes/runo/styles.css
@@ -53,6 +53,10 @@
 	-moz-user-select: none;
 	-ie-user-select: none;
 	user-select: none;
+	-webkit-box-sizing: border-box;
+	-moz-box-sizing: border-box;
+	-ms-box-sizing: border-box;
+	box-sizing: border-box;
 	}
 
 .v-ie6 .v-button {
