--- a/WebContent/VAADIN/themes/runo/button/button.css
+++ b/WebContent/VAADIN/themes/runo/button/button.css
@@ -16,6 +16,8 @@
 	border: 1px solid #babfc0;
 	border-bottom-color: #a5abac;
 	background: #fff url(img/bg.png);
+	-webkit-background-origin: padding;
+	-moz-background-origin: padding;
 	padding: 3px 15px;
 	-webkit-border-radius: 10px;
 	-moz-border-radius: 10px;
@@ -25,6 +27,9 @@
 	min-height: 16px;
 	}
 
+.v-button-caption {
+	color: #464f52;
+	}
 
 /* Small style */
 
