Fixes ##2972: Create theme selector for Sampler
svn changeset:8665 branch:6.1

--- a/WebContent/VAADIN/themes/runo/button/button.css
+++ b/WebContent/VAADIN/themes/runo/button/button.css
@@ -33,7 +33,8 @@
 
 /* Small style */
 
-.v-button-small {
+.v-button-small,
+.v-disabled.v-button-small {
 	font-size: 11px;
 	line-height: 14px;
 	padding: 1px 15px;
@@ -42,7 +43,8 @@
 
 
 /* Link style */
-.v-button-link {
+.v-button-link,
+.v-disabled.v-button-link {
 	border: none;
 	background: transparent;
 	padding: 0;
