--- a/WebContent/VAADIN/themes/sampler/layouts/examplecustomlayout.html
+++ b/WebContent/VAADIN/themes/sampler/layouts/examplecustomlayout.html
@@ -30,7 +30,7 @@
 	</tr>
 	<tr>
 		<td colspan="2" style="padding: 7px; background-color: #4172AE">
-		<IMG align="absbottom" src="../icons/icon_info.gif" /> This
+		<img align="absbottom" src="../../sampler/icons/icon_info.gif" /> This
 		information is in the layout.
 		<td>
 	</tr>
