Fixes #3142: Demo page's large heading should be clickable
svn changeset:8666 branch:6.1

--- a/WebContent/demo/css/styles.css
+++ b/WebContent/demo/css/styles.css
@@ -177,6 +177,12 @@ a:active {
 	font-weight: bold;
 }
 
+#upfront p {
+	font-weight: normal;
+	color: #464440;
+	text-decoration: none;
+}
+
 #content {
 	position: relative;
 	overflow: hidden;
