Fixes #3205: Table columns for rows get pushed forward when used inside Liferay
svn changeset:8699 branch:6.1

--- a/WebContent/VAADIN/themes/base/table/table.css
+++ b/WebContent/VAADIN/themes/base/table/table.css
@@ -38,6 +38,7 @@
 .v-table-header table,
 .v-table-table {
 	border-spacing: 0;
+	border-collapse: separate;
 	margin: 0;
 	padding: 0;
 	border: 0;
