--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -1186,6 +1186,7 @@ div.v-progressindicator-indeterminate-disabled {
 .v-table-header table,
 .v-table-table {
 	border-spacing: 0;
+	border-collapse: separate;
 	margin: 0;
 	padding: 0;
 	border: 0;
