--- a/WebContent/VAADIN/themes/reindeer/styles.css
+++ b/WebContent/VAADIN/themes/reindeer/styles.css
@@ -2929,7 +2929,10 @@ td.v-datefield-calendarpanel-nextyear {
 /* Blue background */
 .v-verticallayout-blue,
 .v-horizontallayout-blue,
-.v-orderedlayout-blue {
+.v-orderedlayout-blue,
+.v-gridlayout-blue,
+.v-csslayout-blue,
+.v-formlayout-blue {
 	background-color: #bcd3de;
 }
 .v-panel-content > div.blue {
@@ -2938,7 +2941,10 @@ td.v-datefield-calendarpanel-nextyear {
 /* Black background */
 .v-verticallayout-black,
 .v-horizontallayout-black,
-.v-orderedlayout-black {
+.v-orderedlayout-black,
+.v-gridlayout-black,
+.v-csslayout-black,
+.v-formlayout-black {
 	background-color: #1e2022;
 }
 .v-panel-content > div.black {
